--- a/client/index.html
+++ b/client/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Rock Paper Scissors</title>
-<link rel="stylesheet" href="styles/main.css">
-</head>
+  <html lang="en">
+    <head>
+      <title>Rock Paper Scissors</title>
+      <link rel="stylesheet" href="styles/main.css">
+    </head>
 
-<body>
-<div class= "rps-wrapper">
-<ul id="events">
-<li>Welcome to Rock Paper Scissors</li>
-</ul>
+    <body>
+      <div class= "rps-wrapper">
+        <ul id="events">
+        </ul>
 
-<div class="button-wrapper">
-<input id="chat">
-<button id ="rock">Rock</button>
-<button id ="paper">Paper</button>
-<button id ="scissors">Scissors</button>
-<button id ="say">Say</button>
-</div>
-</div>
-<script src="src/client.js"></script>
-</body>
+        <div class="button-wrapper">
+          <form id="chat-form">
+            <input id="chat" />
+            <button id ="say">Say</button>
+          </form>
+          <button id ="rock">Rock</button>
+          <button id ="paper">Paper</button>
+          <button id ="scissors">Scissors</button>
+        </div>
+      </div>
+      <script src="/socket.io/socket.io.js"></script>
+      <script src="src/client.js"></script>
+    </body>
 </html>
