minor text fixes

--- a/RPS Assets/leaderboard.html
+++ b/RPS Assets/leaderboard.html
@@ -17,7 +17,7 @@ table {
     width: 25%;
 }
 td, th {
-    border: 1px solid #dddddd;
+    border: 1px solid #ffffffff;
     text-align: left;
     padding: 8px;
 }
