--- a/client/rps/index.html
+++ b/client/rps/index.html
@@ -5,9 +5,15 @@
   <title> Rock Paper Scissors </title>
 </head>
 <style>
-body {
-  background-color: #ffffff;
-}
+  body {
+    background-color: #512698;
+  }
+  p {
+    color: #cccccc;
+  }
+  h1 {
+    color: #cccccc;
+  }
 </style>
 <body>
 
