--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,19 @@
       <link rel="stylesheet" href="styles/main.css">
     </head>
 
+    <style>
+      body {
+        background-color: #512698;
+      }
+      p {
+        color: #cccccc;
+      }
+      h1 {
+        color: #cccccc;
+      }
+    </style>
+    <div align="center">
+    <h1> Welcome to Williams Games Online </h1>
     <body>
       <div class= "rps-wrapper">
         <ul id="events" hidden>
@@ -32,4 +45,14 @@
       <script src="src/clientlib.js"></script>
       <script src="src/clienthome.js"></script>
     </body>
+    <br>
+    <br>
+    <p id="credits"></p>
+    <button onclick="hiddenCredits()"><img src="./rps/williams.png" /></button>
+    <script>
+    function hiddenCredits() {
+      document.getElementById("credits").innerHTML = "Credits: Markus Feng, Christopher Liu, Jian Lu, and Will Fung";
+    }
+    </script>
+  </div>
 </html>
