limited beautification of main page and rps page

--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
 
         <div class="button-wrapper">
           <form id="register-form">
-            Nickname: <input id="nickname"></input>
+            <span style="color: #cccccccc">Nickname:</span> <input id="nickname"></input>
             <!--<button id ="submit">Register</button>-->
           </form>
           <form id="create-form">
@@ -35,7 +35,7 @@
             <button id ="submit">Create Game</button>
           </form>
           <form id="join-form">
-            Room ID: <input id="roomId"></input>
+            <span style="color: #cccccccc">Room ID:</span> <input id="roomId"></input>
             <button id ="submit">Join Game</button>
           </form>
         </div>
@@ -47,8 +47,8 @@
     </body>
     <br>
     <br>
-    <p id="credits"></p>
     <button onclick="hiddenCredits()"><img src="./rps/williams.png" /></button>
+    <p id="credits"></p>
     <script>
     function hiddenCredits() {
       document.getElementById("credits").innerHTML = "Credits: Markus Feng, Christopher Liu, Jian Lu, and Will Fung";
