--- a/client/rps/index.html
+++ b/client/rps/index.html
@@ -88,6 +88,15 @@ document.addEventListener('gameMessage', (evt) => {
   parent.appendChild(el);
 });
 </script>
+  <div align="right">
+  <button onclick="hiddenCredits()"><img src="williams.png" /></button>
+  <p id="credits"></p>
+  </div>
 
+  <script>
+  function hiddenCredits() {
+    document.getElementById("credits").innerHTML = "Credits: Markus Feng, Christopher Liu, Jian Lu, and Will Fung";
+  }
+  </script>
 </body>
 </html>
