--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
           <form id="create-form">
             <select id = "gameName">
               <option value ="rps">Rock Paper Scissors</option>
+              <option value ="ttt">Tic Tac Toe</option>
             </select>
             <button id ="submit">Create Game</button>
           </form>
